# LLM-Nano-ChatGPT

./: .gitignore  LLM-Nano-ChatGPT.code-workspace  README.md  pyproject.toml
docs/: BLOG.md  BLOG_DRAFT.md  README.md
nanochat/: checkpoint_manager.py  dataset.py  gpt.py  loss_eval.py  optim.py  report.py  tokenizer.py
nanochat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
runs/: base_d34_cli.sh  chat_d34_sft_cli.sh  check_cloud_env.sh  download_nanochat_d34.sh  miniseries.sh  prepare_resources.sh  run_base_d12_4060.sh  run_base_d34_4060.sh  run_base_d34_a800_4gpu.sh  run_sft_d34_a800.sh  run_sft_d34_a800_4gpu.sh  runcpu.sh  scaling_laws.sh  setup_uv_env.sh  speedrun.sh
scripts/: base_cli.py  base_eval.py  base_train.py  chat_cli.py  chat_sft.py  download_pretrained.py  tok_eval.py  tok_train.py
