[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanochat"
version = "0.1.0"
description = "the minimal full-stack ChatGPT clone"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "kernels>=0.11.7",
    "psutil>=7.1.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch==2.8.0",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.1",
    "transformers>=4.57.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.optional-dependencies]
cpu = [
    "setuptools>=65.0.0",
    "torch==2.8.0",
]
gpu = [
    "setuptools>=65.0.0",
    "torch==2.8.0",
]

[tool.setuptools]
packages = ["nanochat"]

[tool.setuptools.package-data]
nanochat = ["ui.html", "logo.svg"]
